pre-build conf done (check it)